expose the consumer labels on the API
this PR enables the `labels` column of the `consumers` table to be exposed on the consumer API.

these labels will allow for more usecase specific metadata on the consumer inventory, e.g. attaching identifying attributes
